--- a/index.html
+++ b/index.html
@@ -1,19 +1,57 @@
-<!-- Include stylesheet -->
-<link href="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.snow.css" rel="stylesheet" />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Quill Example</title>
+    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+</head>
+<body>
 
-<!-- Create the editor container -->
-<div id="editor">
-  <p>Hello World!</p>
-  <p>Some initial <strong>bold</strong> text</p>
-  <p><br /></p>
-</div>
+    <div id="editor"></div>
+    <button onclick="saveToFile()">Save as HTML</button>
+    <button onclick="loadFile()">Load HTML</button>
 
-<!-- Include the Quill library -->
-<script src="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.js"></script>
+    <input type="file" id="fileInput" style="display:none;" onchange="loadFileFromInput(event)"/>
 
-<!-- Initialize Quill editor -->
-<script>
-  const quill = new Quill('#editor', {
-    theme: 'snow'
-  });
-</script>
+    <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
+    <script>
+        // Initialize Quill
+        const quill = new Quill('#editor', {
+            theme: 'snow',
+            placeholder: 'Compose your content...',
+            modules: {
+                toolbar: [['bold', 'italic'], [{ 'list': 'ordered'}, { 'list': 'bullet' }], ['link']]
+            }
+        });
+
+        // Save editor content as HTML
+        function saveToFile() {
+            const html = quill.root.innerHTML;
+            const blob = new Blob([html], { type: 'text/html' });
+            const link = document.createElement('a');
+            link.href = URL.createObjectURL(blob);
+            link.download = 'document.html';
+            link.click();
+        }
+
+        // Open file input to load HTML content
+        function loadFile() {
+            document.getElementById('fileInput').click();
+        }
+
+        // Load HTML content from the input file
+        function loadFileFromInput(event) {
+            const file = event.target.files[0];
+            if (file) {
+                const reader = new FileReader();
+                reader.onload = function (e) {
+                    const htmlContent = e.target.result;
+                    quill.root.innerHTML = htmlContent;
+                };
+                reader.readAsText(file);
+            }
+        }
+    </script>
+</body>
+</html>
